[tool.poetry]
name = "tva-automation-tool"
version = "0.1.0"
description = ""
authors = ["Zoltan Miskolci <zoltan.miskolci@jpl.nasa.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
gspread = "^6.0.2"
pytz = "^2024.1"
tqdm = "^4.66.1"
python-cmr = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
