[tool.poetry]
name = "tva-automation-tools"
version = "0.1.0"
description = ""
authors = ["Zoltan Miskolci <zoltan.miskolci@jpl.nasa.gov>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
gspread = "^6.0.2"
pytz = "^2024.1"
tqdm = "^4.66.1"
python-cmr = "^0.12.0"
boto3 = "^1.34.129"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
