[tool.poetry]
name = "tva-automation-tools"
version = "0.1.0"
description = ""
authors = ["James Wood <james.f.wood@jpl.nasa.gov>"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
gspread = "^6.0.2"
pytz = "^2024.1"
tqdm = "^4.66.1"
python-cmr = "^0.13.0"
boto3 = "^1.34.129"
cmr-umm-updater = { git = "https://github.com/podaac/cmr-umm-updater.git", branch = "main" }
gspread-formatting = "^1.2.0"
gql = {extras = ["all"], version = "^3.5.0"}
retrying = "^1.3.4"
podaac-hitide-backfill-tool = { version = "0.10.0rc5", source = "testpypi" }

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
