[tool.poetry]
name = "umm-v-auto-sync"
version = "0.1.0"
description = ""
authors = ["Simon Liu <simon.liu@jpl.nasa.gov>"]
readme = "README.md"
packages = [{include = "podaac"}]

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.1"
requests = "^2.31.0"
python-cmr = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
